--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,58 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="format-detection" content="telephone=no,address=no">
   <meta name="apple-mobile-web-app-status-bar-style" content="white">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Job-Mock</title>
+
+  <!-- 增加响应式样式 -->
+  <style>
+    /* 基础响应式样式 */
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+    }
+
+    #app {
+      width: 100%;
+      min-height: 100vh;
+    }
+
+    /* 移动设备优先设计 */
+    @media screen and (max-width: 768px) {
+      #app {
+        max-width: 100vw;
+        overflow-x: hidden;
+      }
+    }
+
+    /* 平板设备 */
+    @media screen and (min-width: 769px) and (max-width: 1024px) {
+      #app {
+        max-width: 100vw;
+      }
+    }
+
+    /* 桌面设备 */
+    @media screen and (min-width: 1025px) {
+      #app {
+        max-width: 100vw;
+      }
+    }
+
+    /* 高分辨率屏幕优化 */
+    @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+      body {
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+      }
+    }
+  </style>
+
   <script><%= htmlWebpackPlugin.options.script %></script>
 </head>
 <body>
